finalized signup section

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -479,7 +479,7 @@
                             </div> 
                             <div class="generic_price_btn clearfix"> 
                                
-                                <a class="" routerLink="/signup">Sign up</a>
+                                <a class="" routerLink="/signup" onclick="window.scrollTo(0, 0)">Free Trial</a>
                                 
                             </div> 
                             
@@ -524,7 +524,7 @@
                             </div> 
                             <div class="generic_price_btn clearfix"> 
                                  
-                                <a class="" routerLink="/signup">Sign up</a>
+                                <a class="" routerLink="/signup" onclick="window.scrollTo(0, 0)">Free Trial</a>
                              
                             </div> 
                             
@@ -568,7 +568,7 @@
                             </div> 
                             <div class="generic_price_btn clearfix"> 
                                  
-                                <a class="" routerLink="/signup">Sign up</a> 
+                                <a class="" routerLink="/signup" onclick="window.scrollTo(0, 0)">Free Trial</a> 
                             </div> 
                         </div> 
                             
