--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -46,7 +46,7 @@
                         </ul>
                     </div>
                     <div class="navbar-right" >
-                        <a target="__blank" href="https://demo.poslitesoftware.com" class="btn btn-primary" style="border-radius:3.5px;text-transform: uppercase;padding-left: 20px;padding-right: 20px;text-align: center;">UNLIMITED TRIAL ACCESS</a>
+                        <a target="__blank" href="https://demo.poslitesoftware.com" class="btn btn-primary trial_btn">FREE 14 DAYS TRIAL</a>
                     </div>
                 </nav>
             </div>
