--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -230,21 +230,22 @@ header  p {
   color: #fff;
 }
 
-input[type="submit"] {
+button[type="submit"] {
   font-size: .9em;
   color: #fff;
   background: #2F80ED;
   outline: none;
   border: 1px solid #2F80ED;
   cursor: pointer;
-  padding: 0.9em;
+  padding: 0.8em;
   -webkit-appearance: none;
   width: 100%;
   margin: 2em 0;
   letter-spacing: 4px;
+  border-radius: 4px;
 }
 
-input[type="submit"]:hover {
+button[type="submit"]:hover {
   -webkit-transition: .5s all;
   -moz-transition: .5s all;
   -o-transition: .5s all;
@@ -598,7 +599,7 @@ input.checkbox:checked:after {
   }
 
   .main-w3layouts {
-    padding: 6em 0 1em 0;
+    padding: 10em 0 1em 0;
   }
 }
 
@@ -639,7 +640,7 @@ input.checkbox:checked:after {
     margin: 1.5em 0;
   }
 
-  input[type="submit"] {
+  button[type="submit"] {
     margin: 2em 0;
   }
 
@@ -702,12 +703,12 @@ input.checkbox:checked:after {
     margin-top: 1.5em;
   }
 
-  input[type="submit"] {
+  button[type="submit"] {
     margin: 2em 0 1.5em;
     letter-spacing: 3px;
   }
 
-  input[type="submit"] {
+  button[type="submit"] {
     margin: 2em 0 1.5em;
   }
 
@@ -764,10 +765,11 @@ input.checkbox:checked:after {
     background-position: 0 0px;
   }
 
-  input[type="submit"] {
+  button[type="submit"] {
     margin: 1.5em 0;
     padding: 0.8em;
     font-size: .85em;
+    
   }
 
   .colorlibcopy-agile p {
